feat: input buffer

--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -16,7 +16,7 @@
   </style>
   <body>
     <div id="ui"></div>
-    <canvas id="game"></div>
-    <script src="./index.js"></script>
+    <canvas id="game"></canvas>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
